[package]
name = "ws_app"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
futures= "0.3.31"
futures-util = "0.3.31"
serde = {version = "1.0.217" , features = ["derive"]}
sha1 = "0.10.6"
tokio = {version = "1.43.0" , features= ["full"] }
tokio-tungstenite = "0.26.1" 
toml = "0.8.19"
tracing = "0.1.41"
